variable in place for which room to load on page load, next set a session variable for user current room and pass that in

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
             </section>
             <section>
                 <div id="chathistory-area">
-                    {% for result in chats_in_rooms[0] %}
+                    {% for result in chats_in_rooms[user_current_room] %}
                       <div>{{result}}</div>
                     {% endfor %}
 
