pretty close to perfect now

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                 </section>
             </div>
             <div class="col-5">
-              <section>
+              <section id='thechatarea'>
                 <h3>Enter the chat below:</h3>
                 <textarea id="textarena" rows="2" cols="50">
                 </textarea><br/>
