democratically controlled triangle asteroid ship is functional

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,12 @@
                 </div>
               </section>
             </div>
-          </div>
-        </div>
+          </div>  <!-- closes the row div -->
+          <row>
+              <div>Fly a 1980's style asteroid ship democratically (yes the triangle was a ship and it was a smash hit on the atari 2600!):
+              <button id="button-ship">Submit</button></div>
+              <canvas id="canvas" width="500" height="500"></canvas>
+          </row>
+        </div> <!-- closes the container div -->
     </body>
 </html>
