--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
         <script src="{{ url_for('static', filename='index.js') }}"></script>
-        <title>Vote</title>
+        <title>ChatApp</title>
     </head>
     <body>
         <h1 class="jumbotron">ChatApp</h1>
@@ -46,6 +46,7 @@
               <div>Fly a 1980's style asteroid ship democratically (yes the triangle was a ship and it was a smash hit on the atari 2600!):
               <button id="button-ship">Submit</button></div>
               <canvas id="canvas" width="500" height="500"></canvas>
+              <canvas id="canvas2" width="500" height="500"></canvas>
           </row>
         </div> <!-- closes the container div -->
     </body>
