adds to the readme and cleans up the files a bit more

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,9 @@
           </div>  <!-- closes the row div -->
           <row>
               <!-- area to fly the 1979 asteroid classic ship -->
-              <div>Fly a 1980's style asteroid ship democratically (yes the triangle was a ship and it was a smash hit on the atari 2600!):
+              <div>Fly a 1980's style asteroid ship democratically with
+              the awsd keys (yes the triangle was a ship and it was a
+              smash hit on the atari 2600!):
               <canvas id="canvas" width="1000" height="1000"></canvas>
           </row>
         </div> <!-- closes the container div -->
